--- a/Simple_CSharp_Games/Simple_CSharp_Games.csproj
+++ b/Simple_CSharp_Games/Simple_CSharp_Games.csproj
@@ -1,14 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.14" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.14" PrivateAssets="all" />
-  </ItemGroup>
+		<!-- Flatten static assets to the publish root for Netlify -->
+		<StaticWebAssetBasePath></StaticWebAssetBasePath>
+
+		<!-- Optional: Improve globalization support -->
+		<PublishTrimmed>false</PublishTrimmed>
+		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+		<InvariantGlobalization>false</InvariantGlobalization>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.14" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.14" PrivateAssets="all" />
+	</ItemGroup>
+
+	<!-- Ensure index.html and _redirects are copied correctly -->
+	<ItemGroup>
+		<Content Include="index.html" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
+		<Content Include="wwwroot/_redirects" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
+	</ItemGroup>
 
 </Project>
