--- a/Simple_CSharp_Games/Simple_CSharp_Games.csproj
+++ b/Simple_CSharp_Games/Simple_CSharp_Games.csproj
@@ -5,14 +5,15 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 
-		<!-- Flatten static assets to the publish root for Netlify -->
-		<StaticWebAssetBasePath></StaticWebAssetBasePath>
-
-		<!-- Optional: Improve globalization support -->
+		<BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>
 		<PublishTrimmed>false</PublishTrimmed>
+		<PublishSingleFile>false</PublishSingleFile>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
 		<InvariantGlobalization>false</InvariantGlobalization>
+		<DisableBlazorCompression>true</DisableBlazorCompression>
 	</PropertyGroup>
+
+
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.14" />
