Hunting The Manticore - hero + Intro, game start flow working

--- a/Simple_CSharp_Games/Simple_CSharp_Games.csproj
+++ b/Simple_CSharp_Games/Simple_CSharp_Games.csproj
@@ -13,6 +13,16 @@
 		<DisableBlazorCompression>true</DisableBlazorCompression>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <None Remove="Games\ManticoreGame.razor.css" />
+	  <None Remove="Pages\ManticorePage.razor.css" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Games\ManticoreGame.razor.css" />
+	  <Content Include="Pages\ManticorePage.razor.css" />
+	</ItemGroup>
+
 
 
 	<ItemGroup>
