Hunting The Manticore: - created new Layout for game tabs, only in manticore at moment - moved intor into manticor game component - moved text belwo images - added black background to manticore page.

--- a/Simple_CSharp_Games/Simple_CSharp_Games.csproj
+++ b/Simple_CSharp_Games/Simple_CSharp_Games.csproj
@@ -15,11 +15,13 @@
 
 	<ItemGroup>
 	  <None Remove="Games\ManticoreGame.razor.css" />
+	  <None Remove="Layout\BlankLayout.razor.css" />
 	  <None Remove="Pages\ManticorePage.razor.css" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Content Include="Games\ManticoreGame.razor.css" />
+	  <Content Include="Layout\BlankLayout.razor.css" />
 	  <Content Include="Pages\ManticorePage.razor.css" />
 	</ItemGroup>
 
