Fountain Of Objects - created structure for new game in Application - new game page - new game nav link - new game component

--- a/Simple_CSharp_Games/Simple_CSharp_Games.csproj
+++ b/Simple_CSharp_Games/Simple_CSharp_Games.csproj
@@ -14,6 +14,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="wwwroot\images\NewFolder\**" />
+	  <Content Remove="wwwroot\images\NewFolder\**" />
+	  <EmbeddedResource Remove="wwwroot\images\NewFolder\**" />
+	  <None Remove="wwwroot\images\NewFolder\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Games\ManticoreGame.razor.css" />
 	  <None Remove="Layout\BlankLayout.razor.css" />
 	  <None Remove="Pages\ManticorePage.razor.css" />
@@ -35,7 +42,6 @@
 
 
 	<ItemGroup>
-	  <Folder Include="wwwroot\images\NewFolder\" />
 	  <Folder Include="wwwroot\images\tictactoe\" />
 	</ItemGroup>
 
